--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     // ============================================
     // CONFIGURATION GLOBALE
     // ============================================
-    let API_URL = 'https://script.google.com/macros/s/AKfycbyGHLoVVydwvh4t0TEqdtUu8zvRGH8irQkiOvgSN5UCpxkDOfFhYg7DcjslFPGQUZr-/exec';
+    let API_URL = 'https://twilight-resonance-5291.julienolympic.workers.dev/';
     let currentUser = null;
     let currentBalance = [];
 
@@ -884,5 +884,6 @@
     </script>
   </body>
   </html>
+
 
 
