--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     // ============================================
     // CONFIGURATION GLOBALE
     // ============================================
-    let API_URL = 'https://twilight-resonance-5291.julienolympic.workers.dev/';
+    let API_URL = 'https://twilight-resonance-5291.julienolympic.workers.dev';
     let currentUser = null;
     let currentBalance = [];
 
@@ -884,6 +884,7 @@
     </script>
   </body>
   </html>
+
 
 
 
