--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             <div>
               <label class="block text-sm font-medium text-gray-700 mb-2">URL de l'API Google Apps Script</label>
               <input type="text" id="apiUrlInput" 
-                placeholder="https://script.google.com/macros/s/..."
+                placeholder="https://twilight-resonance-5291.julienolympic.workers.dev"
                 class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500">
             </div>
 
@@ -884,6 +884,7 @@
     </script>
   </body>
   </html>
+
 
 
 
