--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 // CONFIGURATION API
 // ============================================
 const API_CONFIG = {
-    workerUrl: 'https://twilight-resonance-5291.julien-olympiclocation.workers.dev',
+    workerUrl: 'https://twilight-resonance-5291.julienolympic.workers.dev',
     
     agencesMap: {
         '00': 'Gèze',
@@ -983,4 +983,5 @@ function showMessage(elementId, message, type) {
   </script>
 </body>
 </html>
+
 
