--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 // ============================================
 const API_CONFIG = {
     // ⚠️ REMPLACEZ PAR VOTRE URL WORKER CLOUDFLARE
-    workerUrl: 'https://twilight-resonance-5291.julien-olympiclocation.workers.dev',
+    workerUrl: 'https://twilight-resonance-5291.julienolympic.workers.dev',
     
     agencesMap: {
         '00': 'Gèze',
@@ -1083,3 +1083,4 @@ console.log('📡 Configuration API:', API_CONFIG);
 </body>
 </html>
           
+
