--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
         // CONFIGURATION API
         // ============================================
         const API_CONFIG = {
-            workerUrl: 'https://balance-agee-ol.julien-delamare.workers.dev',
+            workerUrl: 'https://twilight-resonance-5291.julienolympic.workers.dev',
             agencesMap: {
                 '00': 'Gèze',
                 '01': '5 Av',
@@ -1348,4 +1348,5 @@
     </script>
 </body>
 </html>
+
 
