--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@
           email: email,
           name: email.split('@')[0],
           role: 'Utilisateur',
-          agences: ['Marseille', 'Nice', 'Toulon', 'Avignon', 'Aix-en-Provence']
+          agences: [''Gèze', 'Plombières', '5 Av', 'Gare St Charles', 'La Valentine', 'Aubagne', 'La Ciotat', 'Toulon', 'La Garde']
         }
       ];
     }
@@ -1356,7 +1356,7 @@
         email: email,
         name: email.split('@')[0].charAt(0).toUpperCase() + email.split('@')[0].slice(1),
         role: 'Utilisateur',
-        agences: ['Marseille', 'Nice', 'Toulon', 'Avignon', 'Aix-en-Provence']
+        agences: ['Gèze', 'Plombières', '5 Av', 'Gare St Charles', 'La Valentine', 'Aubagne', 'La Ciotat', 'Toulon', 'La Garde']
       };
       localStorage.setItem('currentUser', JSON.stringify(currentUser));
       showMainApp();
@@ -1371,7 +1371,7 @@
       email: email,
       name: email.split('@')[0].charAt(0).toUpperCase() + email.split('@')[0].slice(1),
       role: 'Utilisateur',
-      agences: ['Marseille', 'Nice', 'Toulon', 'Avignon', 'Aix-en-Provence']
+      agences: ['Gèze', 'Plombières', '5 Av', 'Gare St Charles', 'La Valentine', 'Aubagne', 'La Ciotat', 'Toulon', 'La Garde']
     };
     localStorage.setItem('currentUser', JSON.stringify(currentUser));
     showMainApp();
@@ -2506,4 +2506,5 @@
 
 </body>
 </html>
+
 
