--- a/index.html
+++ b/index.html
@@ -1338,7 +1338,7 @@
           email: email,
           name: email.split('@')[0],
           role: 'Utilisateur',
-          agences: [''Gèze', 'Plombières', '5 Av', 'Gare St Charles', 'La Valentine', 'Aubagne', 'La Ciotat', 'Toulon', 'La Garde']
+          agences: ['Gèze', 'Plombières', '5 Av', 'Gare St Charles', 'La Valentine', 'Aubagne', 'La Ciotat', 'Toulon', 'La Garde']
         }
       ];
     }
@@ -2506,5 +2506,6 @@
 
 </body>
 </html>
+
 
 
